@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-31T08:14:21Z",
-  "count_outdated" : 1534,
-  "uniques_outdated" : 83,
-  "count" : 1606,
+  "timestamp" : "2022-05-31T16:11:46Z",
+  "count_outdated" : 1538,
+  "uniques_outdated" : 84,
+  "count" : 1609,
   "uniques" : 93,
   "views" : [
-    {
-      "timestamp": "2022-05-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 4 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-18T00:00:00Z",
       "count": 14,
