@@ -1,12 +1,7 @@
 {
-  "count": 72,
+  "count": 71,
   "uniques": 1,
   "views": [
-    {
-      "timestamp": "2022-05-17T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-05-18T00:00:00Z",
       "count": 14,
